# LineageTree

./: .coverage  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/source/: LineageTree.rst  conf.py  modules.rst
docs/usage/: installation.md  installation.rst  quickstart.md  quickstart.rst
notebooks/: Basics_of_lineageTree.ipynb  Easy_clustermaps.ipynb
src/: __init__.py~
src/LineageTree/: __init__.py  export_csv.py  lineageTree.py  lineageTreeManager.py  loaders.py  tree_styles.py  utils.py
src/LineageTree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/LineageTree/legacy/: convert_to_new_format.py  export_csv.py  to_lineajea  to_motile.py
src/LineageTree/test/data/: demo.lT
test/: test_lineageTree.py  test_uted.py
test/data/: test-mamut.lT  test-mamut.xml  test.mastodon
