[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
authors = [
    { name = "Léo Guignard", email = "leo.guignard@univ-amu.fr"},
    { name = "Giannis Liaskas"},
    { name = "Christopher Mazzerbo"},
]
maintainers = [
    {name = "Léo Guignard", email = "leo.guignard@univ-amu.fr"}
]
name = "LineageTree"
description = "Structure for Lineage Trees"
version = "1.7.0"
license = { file = "LICENSE" }
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "scipy>=1.9",
    "numpy>=1.23",
    "mastodon-reader",
    "matplotlib",
    "edist",
    "svgwrite",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "tox",
    "black",
    "ruff",
    "bumpver",
]
doc = [
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx_book_theme",
]

[project.urls]
"Bug Tracker" = "https://github.com/GuignardLab/LineageTree/issues"
Documentation = "https://github.com/GuignardLab/LineageTree#README.md"
"Source Code" = "https://github.com/GuignardLab/LineageTree"
"User Support" = "https://github.com/GuignardLab/LineageTree/issues"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.bumpver]
current_version = "1.7.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/LineageTree/__init__.py" = [
    '__version__ = "{version}"',
]

[tool.ruff]
line-length = 79
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "I", # imports
    "T201", # print statements
    "ERA001", #commented out code
]
ignore = [
    "E501", # line too long. let black handle this
    "SIM300", # yoda conditions
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py310"
