[metadata]
name = LineageTree
version = attr: LineageTree.__version__
description = Lineage tree structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leoguignard/LineageTree
author = Léo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/leoguignard/LineageTree/issues
    Documentation = https://github.com/leoguignard/LineageTree#README.md
    Source Code = https://github.com/leoguignard/LineageTree
    User Support = https://github.com/leoguignard/LineageTree/issues

[options]
packages = find:
install_requires =
    scipy>=1.9
    numpy>=1.23
    mastodon-reader

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-lineageTree = napari_lineagetree:napari.yaml

[options.extras_require]
svg =
    svgwrite
    matplotlib