[metadata]
name = LineageTree
version = attr: LineageTree.__version__
description = Lineage tree structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leoguignard/LineageTree
author = Léo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/leoguignard/LineageTree/issues
    Documentation = https://github.com/leoguignard/LineageTree#README.md
    Source Code = https://github.com/leoguignard/LineageTree
    User Support = https://github.com/leoguignard/LineageTree/issues

[options]
packages = find:
install_requires =
    scipy>=1.9
    numpy>=1.23

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
svg =
    svgwrite
    matplotlib
test = 
    svgwrite
    matplotlib
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
treeedit =
    edist
mastodon =
    mastodon-reader
all =
    svgwrite
    matplotlib
    tox
    pytest
    pytest-cov
    edist
    mastodon-reader